Bugs Fixed and Computer Mode Added
Display was not showing the right message at the right time. But was fixed. Added a computer mode with an automated player. Computer will play randomly unless player has 2-in-a-row, then computer will block player. User can choose between normal player game and computer game.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -43,6 +43,6 @@
     align-items: center;
 }
 
-#new-game, #display h3 {
+#new-game, #computer-game, #display h3 {
     font-size: 2.5vw;
 }
